# automata_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: Phase2_machine.json  accept_000111.json  accept_01.json  accept_empty.json  machine_0n1n.json  reject_001.json  reject_0101.json  reject_10.json
include/: console_render.hpp  dynamic_tape.hpp  machine_loader.hpp  result.hpp  step_info.hpp  transition.hpp  transition_table.hpp  turing_machine.hpp
src/: console_render.cpp  dynamic_tape.cpp  machine_loader.cpp  main.cpp  transition_table.cpp  turing_machine.cpp
